--- a/_presentations/20200511-class-behrens2007.md
+++ b/_presentations/20200511-class-behrens2007.md
@@ -1,6 +1,6 @@
 ---
-title: "Behrens et al 2007"
-excerpt: "Presentation in class on Behrens et al 2007 (2020-05-11)"
+title: "2020-05-11 Behrens et al 2007"
+excerpt: "Presentation in class on Behrens et al 2007"
 header:
   teaser: /assets/images/presentations-behrens2007.jpg
 ---
