--- a/_presentations/20200406-class-sporns2005.md
+++ b/_presentations/20200406-class-sporns2005.md
@@ -1,5 +1,5 @@
 ---
-title: "2020-04-06 Sporns et al 2005"
+title: "Sporns et al 2005"
 excerpt: "Presentation in class on Sporns et al 2005"
 header:
   teaser: /assets/images/presentations-sporns2005.png
