--- a/_posts/2022-10-05-test.md
+++ b/_posts/2022-10-05-test.md
@@ -1,8 +1,19 @@
 ---
-title: test
-date: 2022-10-05
+title: 심전도 뽀개기 (1): 그래서, 심전도가 대체 뭐라고?
+date: 2022-10-06
 categories:
-- test
+- ECG
 ---
 
-테스트용 게시물
+- 심전도가 심박수 아닌가요? (아닙니다)
+- 본 글에서는 심전도를 이해하기 위한 가장 기초적인 배경 지식을 소개하려고 합니다.
+
+<!-- more -->
+
+## 1. 심장은 어떻게 뛰나요? - 전기 자극으로요!
+심장은 심장 혈액을 전신으로 내보내기 위해 수축과 이완 운동을 반복하는데요, 이러한 운동은 심장의 전기적 활동에 의해 유도됩니다. 심장은 스스로 전기 자극을 만들어 내고, 그 전기 자극이 이동하면서 심장 근육을 수축시킵니다. 전기 자극의 이동에 따라 심방과 심실이 적절한 시간과 강도로 수축/이완 활동을 하며 혈액을 전신으로 순환시킵니다.
+
+## 2. 심전도(electrocardiogram; ECG) 검사를 통해 심장의 전기적 활동을 엿볼 수 있습니다.
+피부에 전극을 부착하여 심장에서 만들어내는 이러한 전기 자극의 흐름(전위의 변화)를 감지하는 검사가 바로 심전도 검사입니다. 측정된 전기적 활동은 선, 파동으로 기록되는데 이렇게 얻어지는 자료가 바로 심전도입니다. 병원에서는 이러한 심전도의 모양을 보고 심장에 질병이 있는지 없는지 진단하게 됩니다.
+
+## 3. 심장은 어떻게 전기를 만들어 내나요? 
