caption minor and ecg image

--- a/_posts/2022-10-06-ecg1.md
+++ b/_posts/2022-10-06-ecg1.md
@@ -21,5 +21,6 @@ categories:
 
 > 심장 그림을 보는 경우, 그림을 보는 사람 기준으로 왼쪽이 실제 심장의 오른쪽이라고 보아야 합니다. 심장을 가진 사람 기준으로 좌/우가 결정되기 때문입니다! 그림에서 보이는 왼쪽 심방은 우심방으로 불리고, 그림 기준에서 오른쪽 심방은 좌심방입니다. 
 
-![](../assets/images/ecg1_ccs.jpeg){: width="200", height="200"}
-<center><i>출처: <a href="https://en.wikipedia.org/wiki/Cardiac_conduction_system">https://en.wikipedia.org/wiki/Cardiac_conduction_system</a></i>/center>
+![](../../assets/images/ecg1_ccs.jpeg){: width="200", height="200"}
+
+<center><i>출처: <a href="https://en.wikipedia.org/wiki/Cardiac_conduction_system">https://en.wikipedia.org/wiki/Cardiac_conduction_system</a></i></center>
