--- a/_posts/2022-10-06-ecg1.md
+++ b/_posts/2022-10-06-ecg1.md
@@ -6,7 +6,7 @@ categories:
 ---
 
 ![](../../assets/images/ecg1_sinusrhythm.png)
-<center><i>출처: <a href="https://en.wikipedia.org/wiki/Electrocardiographym">https://en.wikipedia.org/wiki/Electrocardiography</a></i></center>
+<center><i>출처: <a href="https://en.wikipedia.org/wiki/Electrocardiographym">https://en.wikipedia.org/wiki/Electrocardiography</a></i></center>{: width="300", height="300"}
 
 - 심전도가 심박수 아닌가요? (아닙니다)
 - 본 글에서는 심전도를 이해하기 위한 가장 기초적인 배경 지식을 소개하려고 합니다.
@@ -17,21 +17,21 @@ categories:
 심장은 심장 혈액을 전신으로 내보내기 위해 수축과 이완 운동을 반복하는데요, 이러한 운동은 <strong><span style="background-color: #fff5b1">심장의 전기적 활동</span></strong>에 의해 유도됩니다. 심장은 스스로 전기 자극을 만들어 내고, 그 전기 자극이 이동하면서 심장 근육을 수축시킵니다. 전기 자극의 이동에 따라 심방과 심실이 적절한 시간과 강도로 수축/이완 활동을 하며 혈액을 전신으로 순환시킵니다.
 
 ## 심전도(electrocardiogram; ECG) 검사를 통해 심장의 전기적 활동을 엿볼 수 있습니다.
-피부에 전극을 부착하여 <u>심장에서 만들어내는 이러한 전기 자극의 흐름(전위의 변화)를 감지하는 검사</u>가 바로 <strong><span style="background-color: #fff5b1">심전도 검사</span></strong>입니다. 측정된 전기적 활동은 선, 파동으로 기록되는데 이렇게 얻어지는 자료가 바로 심전도이며 그 모양이 게시글 가장 상단에 보이는 파동 모양입니다. 병원에서는 이러한 심전도의 모양을 보고 심장에 질병이 있는지 없는지 진단하게 됩니다.
+피부에 전극을 부착하여 <u>심장에서 만들어내는 이러한 전기 자극의 흐름(전위의 변화)를 감지하는 검사</u>가 바로 <strong><span style="background-color: #fff5b1">심전도 검사</span></strong>입니다. 측정된 전기적 활동은 선, 파동으로 기록되며 이것이 바로 심전도입니다. 병원에서는 이러한 심전도의 모양을 보고 심장에 질병이 있는지 없는지 진단하게 되죠.
 
 ## 심장 자극 전도계를 통해 전기 자극이 전달됩니다.
 심장은 자체적으로 전기적 활동을 할 수 있게 하는 <strong><span style="background-color: #fff5b1">심장 자극 전도계(cardiac conduction system)</span></strong>를 갖고 있습니다.
 
 > 심장 그림을 보는 경우, 그림을 보는 사람 기준으로 왼쪽이 실제 심장의 오른쪽이라고 보아야 합니다. 심장을 가진 사람 기준으로 좌/우가 결정되기 때문입니다! 그림에서 보이는 왼쪽 심방은 우심방으로 불리고, 그림 기준에서 오른쪽 심방은 좌심방입니다. 
 
-![](../../assets/images/ecg1_ccs.jpeg){: width="200", height="200"}
+![](../../assets/images/ecg1_ccs.jpeg){: width="300", height="300"}
 
 <center><i>출처: <a href="https://en.wikipedia.org/wiki/Cardiac_conduction_system">https://en.wikipedia.org/wiki/Cardiac_conduction_system</a></i></center>
 
 한번의 심장 박동 동안 전기 자극은 심장 자극 전도계를 한번 거치게 됩니다. 전기 자극은 SA node (Sinoatrial node; 동(방)결절)에서 만들어집니다. 이 신호는 (internodal) atrial pathway (결절간심방경로)를 통해 AV node (Atrioventricular node; 방실결절)로 전달됩니다. 이후 AV bundle (His bundle; 히스속), right & left bundle branch (우각&좌각), Purkinje fibers (푸르킨예 섬유)로 순차적으로 신호가 전달됩니다. 천천히 그림을 따라가보시면, 전기 신호는 우상방(SA node)에서 좌하방(좌심실쪽)으로 전달되는 것을 보실 수 있습니다! 
 
 ## 그래서 전기가 흐른다는 게 무슨 말이죠?
-심장에 전기가 흘러서 심장이 뛴다는 것, 그 전기는 심장 내에서 흐른다는 것을 살펴보았습니다. 그러나 여전히 대체 심장에 전기가 어떻게 흐르고, 심전도 파형은 왜 저렇게 생겨먹게 되는지(?)에 대한 의문이 남으실 겁니다. 이를 알아보기 위해서는 우선 심근세포, 심근세포의 분극과 탈분극, 그리고 심전도 파동 측정/기록의 기본 원리에 대해 알고 가야 합니다.
+심장에 전기가 흘러서 심장이 뛴다는 것, 그 전기는 심장 내에서 흐른다는 것을 살펴보았습니다. 그러나 여전히 대체 심장에 전기가 어떻게 흐르고, 심전도 파형은 왜 저렇게 생겨먹게 되는지(?)에 대한 의문이 남으실 겁니다. 이를 이해하기 위해 우선 심근세포, 심근세포의 분극과 탈분극, 그리고 심전도 파동 측정/기록의 기본 원리에 대해 알아봅시다!
 
 ### 심근세포의 분극과 탈분극
 
