--- a/_posts/2022-10-06-ecg1.md
+++ b/_posts/2022-10-06-ecg1.md
@@ -5,8 +5,8 @@ categories:
 - ECG
 ---
 
-![](../../assets/images/ecg1_sinusrhythm.png)
-<center><i>출처: <a href="https://en.wikipedia.org/wiki/Electrocardiographym">https://en.wikipedia.org/wiki/Electrocardiography</a></i></center>{: width="200", height="200"}
+![](../../assets/images/ecg1_sinusrhythm.png){: width="200", height="200"}
+<center><i>출처: <a href="https://en.wikipedia.org/wiki/Electrocardiographym">https://en.wikipedia.org/wiki/Electrocardiography</a></i></center>
 
 - 심전도가 심박수 아닌가요? (아닙니다)
 - 본 글에서는 심전도를 이해하기 위한 가장 기초적인 배경 지식을 소개하려고 합니다.
