--- a/_posts/2022-10-06-ecg1.md
+++ b/_posts/2022-10-06-ecg1.md
@@ -3,13 +3,12 @@ title: '심전도 뽀개기 (1): 그래서, 심전도가 대체 뭐라고?'
 date: 2022-10-06
 categories:
 - ECG
+tags:
+- ECG
 ---
 
-![](../../assets/images/ecg1_sinusrhythm.png){: width="400", height="400"}
-<center><i>출처: <a href="https://en.wikipedia.org/wiki/Electrocardiographym">https://en.wikipedia.org/wiki/Electrocardiography</a></i></center>
-
 - 심전도가 심박수 아닌가요? (아닙니다)
-- 본 글에서는 심전도를 이해하기 위한 가장 기초적인 배경 지식을 소개하려고 합니다.
+- 본 글에서는 심전도를 이해하기 위한 배경 지식을 소개하려고 합니다.
 
 <!-- more -->
 
@@ -31,9 +30,112 @@ categories:
 한번의 심장 박동 동안 전기 자극은 심장 자극 전도계를 한번 거치게 됩니다. 전기 자극은 SA node (Sinoatrial node; 동(방)결절)에서 만들어집니다. 이 신호는 (internodal) atrial pathway (결절간심방경로)를 통해 AV node (Atrioventricular node; 방실결절)로 전달됩니다. 이후 AV bundle (His bundle; 히스속), right & left bundle branch (우각&좌각), Purkinje fibers (푸르킨예 섬유)로 순차적으로 신호가 전달됩니다. 천천히 그림을 따라가보시면, 전기 신호는 우상방(SA node)에서 좌하방(좌심실쪽)으로 전달되는 것을 보실 수 있습니다! 
 
 ## 그래서 전기가 흐른다는 게 무슨 말이죠?
-심장에 전기가 흘러서 심장이 뛴다는 것, 그 전기는 심장 내에서 흐른다는 것을 살펴보았습니다. 그러나 여전히 대체 심장에 전기가 어떻게 흐르고, 심전도 파형은 왜 저렇게 생겨먹게 되는지(?)에 대한 의문이 남으실 겁니다. 이를 이해하기 위해 우선 심근세포, 심근세포의 분극과 탈분극, 그리고 심전도 파동 측정/기록의 기본 원리에 대해 알아봅시다!
+심장에 전기가 흘러서 심장이 뛴다는 것, 그 전기는 심장 내에서 흐른다는 것을 살펴보았습니다. 그러나 여전히 대체 심장에 전기가 어떻게 흐르고, 심전도 파형은 왜 저렇게 아래처럼 생겨먹게 되는지(?)에 대한 의문이 남으실 겁니다. 이를 이해하기 위해 우선 심근세포, 심근세포의 분극과 탈분극, 그리고 심전도 파동 측정/기록의 기본 원리에 대해 알아봅시다!(조금 어려운 파트가 시작됩니다)
+
+![](../../assets/images/ecg1_sinusrhythm.png){: width="400", height="400"}
+<center><i>출처: <a href="https://en.wikipedia.org/wiki/Electrocardiographym">https://en.wikipedia.org/wiki/Electrocardiography</a></i></center>
 
 ### 심근세포의 분극과 탈분극
+심장근육세포, 즉 심근세포는 아래 그림과 같이 일렬로 길게 배열되어 있습니다. 전기의 흐름과 수축은 순차적으로 일어나며, 방향성을 갖습니다. 즉, 심근세포가 배열된 방향으로 흐르게 됩니다.
+![](../../assets/images/ecg1_cardiac_muscle.png){: width="400", height="400"}
+<center><i>출처: <a href=https://en.wikipedia.org/wiki/Cardiac_muscle>https://en.wikipedia.org/wiki/Cardiac_muscle</a></i></center>
+
+일반적으로 세포는 세포막전위를 갖고 있는데요, 세포막을 기준으로 내부와 외부의 있는 양이온, 음이온의 농도가 달라 전위차가 발생하기 때문입니다. 심근세포도 마찬가지입니다. 심근세포가 이완되어 있는 이완기에는 세포막을 중심으로 세포 밖에는 양이온, 세포 안에는 음이온이 가득차있는 <strong><span style="background-color: #fff5b1">분극화</span></strong>가 되어 있습니다. 심근세포가 자극을 받게 되면, 양이온이 세포 내부로 이동하여 세포 안이 (+)극을 띠게 되고, 세포 밖이 (-)극을 띠게 되는 <strong><span style="background-color: #fff5b1">탈분극</span></strong>이 일어납니다. 자극을 받은 세포는 인접 세포에 자극을 전달하게 되며, 해당 인접 세포 또한 탈분극화 되게 됩니다. 이렇게 심근세포의 배열에 따라 세포가 순차적으로 탈분극되며 자극이 전달됩니다. 세포는 탈분극화가 되며 <strong>수축</strong>하게 되며, 이러한 순차적인 탈분극화를 놓고 우리는 '전기가 흐른다!' 라고 표현합니다. 참고로, 탈분극 후에는 세포 안으로 들어왔던 양이온이 다시 세포 밖으로 나가게 되며 원래의 상태, 즉 세포 안이 (-)극을 띠고 세포 밖이 (+)극을 띠는 분극 상태로 돌아가게 되며, 이것을 재분극이라고 부릅니다. 그냥 분극이 아니라 재분극이라고 부르는 이유는, 탈분극 후(세포가 자극에 반응한 후)에는 다음 자극에 반응할 수 없는 짧은 불응기가 있기 때문입니다.
 
 
 ### 심전도 파동 측정의 기본 원리
+방금까지 전기는 심근세포의 분극과 탈분극을 통해 세포가 배열된 방향으로 흐른다는 것을 배웠습니다. 이러한 활동으로부터 어떻게 심전도 파동을 측정하게 되는 것일까요?
+
+심근세포 조직이 다음과 같이 있고, 전기를 측정할 수 있는 전극을 놓아 전류를 측정할 수 있습니다. 이 때 조직의 한쪽에 - 전극, 다른 쪽에 + 전극을 놓고 전류를 측정할 수 있는데, - 극 쪽의 세포에서 탈분극(세포 내부가 +)이 시작되어 + 극을 향해 진행되면, 위로 솟은 파형이 기록됩니다. 
+
+![](../../assets/images/ecg1_depo.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+한편, + 극쪽의 세포에서 탈분극이 시작되어 - 극을 향해 진행되면, 아래로 꺾인 파형이 심전도 결과지에 나타나게 됩니다. 
+
+![](../../assets/images/ecg1_depo2.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+탈분극 이후에는 재분극이 일어나게 되는데요, + 극의 세포에서부터 재분극이 시작되어 - 극 방향으로 진행되면, 첫번째 경우(탈분극이 + 극쪽으로 진행될 때)와 같이 위로 솟은 파형을 보게 됩니다.
+
+![](../../assets/images/ecg1_repo.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+마지막으로, - 극과 + 극이 놓인 것과 직교하는 방향으로 자극이 흐르는 경우도 있는데요, 이 때에는 평평한 파형이 기록되게 됩니다. 즉, 자극이 흐르지 않을 때 뿐 아니라 심장의 전기적 활동이 두 전극의 축에 직교해서 흐를 때에도 평평한 파형이 관찰됩니다.
+
+![](../../assets/images/ecg1_flat.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+<strong><span style = "background-color: #fff5b1">즉, 심장 자극 전도계를 따라 전기 신호가 우상방에서 좌하방으로 흐르면서, 심근세포가 순차적으로 탈분극/재분극을 겪게되고, 이러한 흐름이 심전도 기록지에 여러 형태의 파형으로 기록되는 것입니다!</strong></span>
+
+## 심전도 주요 파형의 전기적 원리 
+자 이제 진짜로 왜 심전도 파형이 이렇게 생겨먹었는지 알아봅시다.
+
+>참고로, 아래 그림은 심전도 측정 방법 중에서 대표적인 Lead 2 방향으로 측정된 심전도를 나타내며, 우선은 쉬운 이해를 위해 Lead 2 심전도 기준으로 파형을 설명하였습니다! Lead 2는 심장을 기준으로 오른팔쪽(우상방)에 - 극, 왼다리쪽(좌하방)에 +극을 배치한다고 가정합니다. 각 Lead에 대한 설명은 다음 글에서..
+
+![](../../assets/images/ecg1_sinusrhythm.png){: width="400", height="400"}
+<center><i>출처: <a href="https://en.wikipedia.org/wiki/Electrocardiographym">https://en.wikipedia.org/wiki/Electrocardiography</a></i></center>
+
+그림에서 확인할 수 있듯, 심전도의 3가지 주요 파형으로는 P wave, QRS complex, 그리고 T wave가 있으며, 각 파형 사이의 구간으로 PR interval, PR segment, QT interval, ST segment 등이 있습니다. 
+> interval은 파형의 시작점부터 다음 파형의 시작점까지를 의미합니다.
+> segment는 항개의 파형이 끝나는 지점부터 다음 파형의 시작점까지를 나타냅니다.
+
+### P wave
+P wave는 SA node에 의해 만들어진 <strong><span style="background-color: #fff5b1">심방의 탈분극</span></strong>입니다. 그림을 따라가 봅시다.
+
+> 앞서 언급했듯, 심장을 기준으로 우상방에 - 극, 좌하방에 + 극을 배치하는 Lead 2 측정 방법을 가정합니다.
+
+![](../../assets/images/ecg1_1_P-wave.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+**SA node** 에서 탈분극이 시작되어 전기 자극이 만들어져서 좌우 아래쪽으로 퍼지는데요, 이때 좌우로 퍼지는 전기 벡터들을 평균을 내면 평균 벡터는 **AV node**로 향하는 벡터가 됩니다. 즉 탈분극이 SA node에서 AV node로 전달되는 것이죠. 탈분극(+)이 + 전극 방향으로 진행되는 것이므로, 위로 솟은 파(=P-wave)가 만들어집니다.
+
+### PR segment
+PR segment는 심실(ventricle)로 전달되기 전, AV node에서 일어나는 전도(conduction)의 delay 부분입니다. AV node가 탈분극 된 상태에서 심실로의 전도가 느려져 살짝 delay가 일어나는데요, 이때 전류의 흐름이 없으므로 평평한 파형이 만들어집니다.
+
+![](../../assets/images/ecg1_2_PR-segment_interval.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+PR interval은 P wave와 PR segment를 합친 구간으로, 심방에서 심실에 도달할 때까지 걸리는 시간(방실전도계를 통과하는 데 걸리는 시간)입니다.
+
+### QRS complex
+QRS complex는 <strong><span style="background-color: #fff5b1">심실의 탈분극(depolarization of ventricles)</span></strong>과 관련되어 있으며 심장의 주된 수축을 유도합니다.
+
+#### Q wave
+<strong><span style="background-color: #fff5b1">심실중격(ventricular septum; 우심실과 좌심실 사이의 벽)의 탈분극(septal depolarization)</span><strong>입니다. AV node에서 his bundle을 거쳐 left & right bundle branch로 탈분극이 전달되는데, 여기서 left bundle branch가 심실중격의 탈분극(septal depolarization)과 주요하게 관련이 있습니다. 이에 탈분극 흐름의 평균 벡터(mean vector, net depolarization vector)가 우상방, 즉 + 극에서 멀어져 - 극에 가까워지는 방향으로 생겨 아래쪽으로 꺾인 파형이 만들어집니다.
+
+![](../../assets/images/ecg1_3_Q_wave.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+#### R wave
+심실중격의 탈분극 이후 다른 심실 부분의 탈분극입니다. 좌심실의 근육이 우심실 근육보다 두꺼워 더 강한 net vector를 생성하게 됩니다. 이에 좌하방으로 생기는 좌측 net vector와 우하방으로 생기는 net vector를 합쳐 net vector를 구하게 되면 좀 더 좌하방으로 방향의 평균 벡터가 됩니다. 이에 + 극 방향으로 탈분극 net vector가 생기게 되어, 위로 솟는 파형이 만들어집니다.
+
+![](../../assets/images/ecg1_4_R_wave.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+
+#### S wave
+심실 탈분극의 후반부입니다. 푸르킨예 섬유(purkinje fibers)를 따라서 탈분극이 전달되게 되어서 결국 탈분극이 - 극 방향으로 흐르게 되어 아래쪽으로 꺾인 파형이 만들어집니다.
+
+![](../../assets/images/ecg1_5_S_wave.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+### ST segment
+<strong><span style="background-color: #fff5b1">심실 전체가 탈분극 상태에 멈춰져 있는 시기</span></strong>이며 전하의 이동이 없어 평평한 파형을 보이게 됩니다.
+
+![](../../assets/images/ecg1_6_ST_segment.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+### T wave
+<strong><span style="background-color: #fff5b1">심실 재분극(ventricular repolarization)</span></strong> 상태입니다. 탈분극 후에는 자연스럽게 재분극(심근세포 내부가 다시 -가 됨)이 일어납니다. + 전극 쪽에서부터 재분극이 일어나 순차적으로 진행되면서 + 극으로부터는 멀어지고 - 극에 가까워지는 방향으로 재분극이 진행되면서 위로 꺾인 파형이 만들어집니다.
+
+![](../../assets/images/ecg1_7_T wave.png){: width="300", height="300"}
+<center><i>출처: <a href="https://www.youtube.com/watch?v=CNN30YHsJw0">https://www.youtube.com/watch?v=CNN30YHsJw0</a></i></center>
+
+### QT interval
+QRS-complex부터 T-wave가 끝날 때까지의 기간입니다. 심박수의 영향을 많이 받아, 심박수가 빠르면 짧아지고 심박수가 늦어지면 길어지는 특징이 있습니다.
+
+
+지금까지 심장의 전기적 활동부터 시작해 각 심전도 파형의 전기적 원리를 알아보며 심전도의 정체를 파헤쳐보았습니다. 각 파형마다 의미하는 활동이 있어, 어떤 파형이 어떻게 이상한지 모양을 보고, 어떤 부분에 이상이 있는지 진단/추적하게 됩니다. 
+
+다음 심전도 시리즈에서는 표준 12유도 심전도 검사에 대해 알아보겠습니다(제발 곧 돌아올 수 있기를).
