--- a/_posts/2022-10-06-ecg1.md
+++ b/_posts/2022-10-06-ecg1.md
@@ -41,7 +41,13 @@ tags:
 ![](../../assets/images/ecg1_cardiac_muscle.png){: width="400", height="400"}
 <center><i>출처: <a href=https://en.wikipedia.org/wiki/Cardiac_muscle>https://en.wikipedia.org/wiki/Cardiac_muscle</a></i></center>
 
-일반적으로 세포는 세포막전위를 갖고 있는데요, 세포막을 기준으로 내부와 외부의 있는 양이온, 음이온의 농도가 달라 전위차가 발생하기 때문입니다. 심근세포도 마찬가지입니다. 심근세포가 이완되어 있는 이완기에는 세포막을 중심으로 세포 밖에는 양이온, 세포 안에는 음이온이 가득차있는 <strong><span style="background-color: #fff5b1">분극화</span></strong>가 되어 있습니다. 심근세포가 자극을 받게 되면, 양이온이 세포 내부로 이동하여 세포 안이 (+)극을 띠게 되고, 세포 밖이 (-)극을 띠게 되는 <strong><span style="background-color: #fff5b1">탈분극</span></strong>이 일어납니다. 자극을 받은 세포는 인접 세포에 자극을 전달하게 되며, 해당 인접 세포 또한 탈분극화 되게 됩니다. 이렇게 심근세포의 배열에 따라 세포가 순차적으로 탈분극되며 자극이 전달됩니다. 세포는 탈분극화가 되며 <strong>수축</strong>하게 되며, 이러한 순차적인 탈분극화를 놓고 우리는 '전기가 흐른다!' 라고 표현합니다. 참고로, 탈분극 후에는 세포 안으로 들어왔던 양이온이 다시 세포 밖으로 나가게 되며 원래의 상태, 즉 세포 안이 (-)극을 띠고 세포 밖이 (+)극을 띠는 분극 상태로 돌아가게 되며, 이것을 재분극이라고 부릅니다. 그냥 분극이 아니라 재분극이라고 부르는 이유는, 탈분극 후(세포가 자극에 반응한 후)에는 다음 자극에 반응할 수 없는 짧은 불응기가 있기 때문입니다.
+일반적으로 세포는 세포막전위를 갖고 있는데요, 세포막을 기준으로 내부와 외부의 있는 양이온, 음이온의 농도가 달라 전위차가 발생하기 때문입니다. 심근세포도 마찬가지입니다. 
+
+심근세포가 이완되어 있는 이완기에는 세포막을 중심으로 세포 밖에는 양이온, 세포 안에는 음이온이 가득차있는 <strong><span style="background-color: #fff5b1">분극화</span></strong>가 되어 있습니다. 심근세포가 자극을 받게 되면, 양이온이 세포 내부로 이동하여 세포 안이 (+)극을 띠게 되고, 세포 밖이 (-)극을 띠게 되는 <strong><span style="background-color: #fff5b1">탈분극</span></strong>이 일어납니다. 자극을 받은 세포는 인접 세포에 자극을 전달하게 되며, 해당 인접 세포 또한 탈분극화 되게 됩니다. 이렇게 심근세포의 배열에 따라 세포가 순차적으로 탈분극되며 자극이 전달됩니다. 
+
+세포는 탈분극화가 되며 <strong>수축</strong>하게 되며, 이러한 순차적인 탈분극화를 놓고 우리는 '전기가 흐른다!' 라고 표현합니다. 
+
+참고로, 탈분극 후에는 세포 안으로 들어왔던 양이온이 다시 세포 밖으로 나가게 되며 원래의 상태, 즉 세포 안이 (-)극을 띠고 세포 밖이 (+)극을 띠는 분극 상태로 돌아가게 되며, 이것을 재분극이라고 부릅니다. 그냥 분극이 아니라 재분극이라고 부르는 이유는, 탈분극 후(세포가 자극에 반응한 후)에는 다음 자극에 반응할 수 없는 짧은 불응기가 있기 때문입니다.
 
 
 ### 심전도 파동 측정의 기본 원리
